syntax = "proto3";

package users.v1;

option go_package = "scylla-grpc-adapter/gen/users/v1;usersv1";

service UsersService {
  rpc GetById (GetByIdRequest) returns (GetByIdResponse) {}
  rpc GetByUsername (GetByUsernameRequest) returns (GetByUsernameResponse) {}
  rpc GetAll (GetAllRequest) returns (GetAllResponse) {}
  // rpc Put (PutRequest) returns (PutResponse) {}
  // rpc Delete (DeleteRequest) returns (DeleteResponse) {}
}

message GetByIdRequest {
  string id = 1;
}

message GetByUsernameRequest {
  string username = 1;
}

message GetResponse {
  string id = 1;
  string username = 2;
}

message GetByIdResponse {
  GetResponse user = 1;
}

message GetByUsernameResponse {
  GetResponse user = 1;
}

message GetAllRequest {
} // todo: replace with pagination

message GetAllResponse {
  repeated GetResponse users = 1;
}

message PutRequest {
  string username = 1;
  string password = 2;
}

message PutResponse {
  string message = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  string message = 1;
}
